<resources>
    <string name="app_name">Расписание</string>
    <string name="change_theme">Выбор темы</string>
    <string name="map_area">Карта райончика</string>

    <string name="first_pair_called">1. 08:30–10:00</string>
    <string name="second_pair_called">2. 10:10–11:40</string>
    <string name="third_pair_called">3. 12:20–13:50</string>
    <string name="fourth_pair_called">4. 14:00–15:30</string>
    <string name="fifth_pair_called">5. 15:40–17:10</string>
    <string name="sixth_pair_called">6. 17:20–18:50</string>
    <string name="seventh_pair_called">7. 19:00–20:30</string>

    <string name="theme_alina">Alina</string>
    <string name="theme_loli">Loli</string>
    <string name="theme_storm">Electricity</string>
    <string name="theme_noct">Iamgay</string>
    <string name="theme_sasha">Pornhub</string>
    <string name="theme_satanism">Satanism</string>

    <string name="monday">Понедельник</string>
    <string name="tuesday">Вторник</string>
    <string name="wednesday">Среда</string>
    <string name="thursday">Четверг</string>
    <string name="friday">Пятница</string>
    <string name="saturday">Суббота</string>

    <string name="today">Сегодня</string>
    <string name="tomorrow">Завтра</string>

    <string name="image_description">background_image</string>
    <string name="image_settings">background_image</string>
    <string name="designed_by_chiburick">designed by @chiburick</string>
    <string name="devoloped_by_antoshka_izh">devoloped by @antoshka_izh</string>
</resources>