<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SettingsActivity">

    <ImageView
        android:id="@+id/image_settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/change_theme"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/backArrow"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="backDay"
        android:src="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/change_theme"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/backArrow"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:columnCount="3"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">

        <ImageView
            android:id="@+id/theme1"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_columnWeight="1"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/theme_alina"
            android:onClick="updateAlina"
            android:src="@drawable/alina_theme" />

        <ImageView
            android:id="@+id/theme2"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_columnWeight="1"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:contentDescription="@string/theme_loli"
            android:onClick="updateLoli"
            android:src="@drawable/loli_selected" />

        <ImageView
            android:id="@+id/theme3"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_columnWeight="1"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:contentDescription="@string/theme_storm"
            android:onClick="updateElectricity"
            android:src="@drawable/electricity_theme" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/theme_alina"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/theme_loli"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/theme_storm"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/theme4"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_columnWeight="1"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="4dp"
            android:contentDescription="@string/theme_noct"
            android:onClick="updateIamgay"
            android:src="@drawable/iamgay_theme" />

        <ImageView
            android:id="@+id/theme5"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_columnWeight="1"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="4dp"
            android:contentDescription="@string/theme_sasha"
            android:onClick="updatePornhub"
            android:src="@drawable/pornhub_theme" />

        <ImageView
            android:id="@+id/theme6"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_columnWeight="1"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="4dp"
            android:contentDescription="@string/theme_satanism"
            android:onClick="updateSatanism"
            android:src="@drawable/satanism" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/theme_noct"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/theme_sasha"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/theme_satanism"
            android:textColor="@color/white" />
    </GridLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:onClick="toInstagramChiburick"
        android:text="@string/designed_by_chiburick"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="toInstagramAntoha"
        android:text="@string/devoloped_by_antoshka_izh"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>