<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/dayBackArrow"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:onClick="back"
            android:src="@drawable/arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dayHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/dayBackArrow"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Понедельник" />

        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:columnCount="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dayHeader">

            <TextView
                style="@style/CalledStyle"
                android:layout_width="0dp"
                android:layout_columnWeight="35"
                android:layout_gravity="fill"
                android:text="@string/first_pair_called" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="60"
                android:layout_gravity="fill"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/m_a"
                    style="@style/ClassStyle"
                    android:layout_height="wrap_content" />

                <View
                    android:id="@+id/line_1"
                    style="@style/LineStyleWeek" />

                <TextView
                    android:id="@+id/m_b"
                    style="@style/ClassStyle" />
            </LinearLayout>

            <View
                android:id="@+id/line_2"
                style="@style/LineStyle" />

            <TextView
                style="@style/CalledStyle"
                android:text="@string/second_pair_called" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="60"
                android:layout_gravity="fill"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/m_c"
                    style="@style/ClassStyle" />

                <View
                    android:id="@+id/line_3"
                    style="@style/LineStyleWeek" />

                <TextView
                    android:id="@+id/m_d"
                    style="@style/ClassStyle" />
            </LinearLayout>

            <View
                android:id="@+id/line_4"
                style="@style/LineStyle" />

            <TextView
                style="@style/CalledStyle"
                android:text="@string/third_pair_called" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="60"
                android:layout_gravity="fill"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/m_e"
                    style="@style/ClassStyle" />

                <View
                    android:id="@+id/line_5"
                    style="@style/LineStyleWeek" />

                <TextView
                    android:id="@+id/m_f"
                    style="@style/ClassStyle"
                    android:visibility="gone" />
            </LinearLayout>

            <View
                android:id="@+id/line_6"
                style="@style/LineStyle" />

            <TextView
                style="@style/CalledStyle"
                android:text="@string/fourth_pair_called" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="60"
                android:layout_gravity="fill"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/m_g"
                    style="@style/ClassStyle" />

                <View
                    android:id="@+id/line_7"
                    style="@style/LineStyleWeek" />

                <TextView
                    android:id="@+id/m_h"
                    style="@style/ClassStyle" />
            </LinearLayout>

            <View
                android:id="@+id/line_8"
                style="@style/LineStyle" />

            <TextView
                style="@style/CalledStyle"
                android:text="@string/fifth_pair_called" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="60"
                android:layout_gravity="fill"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/m_i"
                    style="@style/ClassStyle" />

                <View
                    android:id="@+id/line_9"
                    style="@style/LineStyleWeek" />

                <TextView
                    android:id="@+id/m_j"
                    style="@style/ClassStyle" />
            </LinearLayout>

            <View
                android:id="@+id/line_10"
                style="@style/LineStyle" />

            <TextView
                style="@style/CalledStyle"
                android:text="@string/sixth_pair_called" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="60"
                android:layout_gravity="fill"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/m_k"
                    style="@style/ClassStyle" />

                <View
                    android:id="@+id/line_11"
                    style="@style/LineStyleWeek" />

                <TextView
                    android:id="@+id/m_l"
                    style="@style/ClassStyle" />
            </LinearLayout>

            <View
                android:id="@+id/line_12"
                style="@style/LineStyle" />

            <TextView
                style="@style/CalledStyle"
                android:text="@string/seventh_pair_called" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="60"
                android:layout_gravity="fill"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/m_m"
                    style="@style/ClassStyle" />

                <View
                    android:id="@+id/line_13"
                    style="@style/LineStyleWeek" />

                <TextView
                    android:id="@+id/m_n"
                    style="@style/ClassStyle" />
            </LinearLayout>

            <View
                android:id="@+id/line_14"
                style="@style/LineStyle" />
        </GridLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>